Fix search text truncation (#609)

--- a/scss/reactTag.scss
+++ b/scss/reactTag.scss
@@ -221,6 +221,7 @@
 }
 
 .react-tags__search input {
+  min-height: 1rem;
   /* prevent autoresize overflowing the container */
   max-width: 100%;
   min-width: 8rem;
